--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>semester_app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>semester_app</name>
+    <packaging>war</packaging>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
