--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 # Web Server settings
-server.port = 8080
+server.port = 5000
 
 # ===============================
 # = LOGGING
@@ -14,11 +14,11 @@ server.port = 8080
 
 
 # Connection url for the database "Local MySQL"
-spring.datasource.url = jdbc:mysql://localhost:3306/vacation_db?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
+spring.datasource.url = jdbc:mysql://vacation.coxhd0mx15wr.us-east-2.rds.amazonaws.com:3306/vacation_db?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
 
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = password
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
