--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Web Server settings
-server.port = 5000
+server.port = 8080
 
 
 # ===============================
@@ -15,7 +15,8 @@ server.port = 5000
 
 
 # Connection url for the database "Local MySQL"
-spring.datasource.url = jdbc:mysql://vacation.coxhd0mx15wr.us-east-2.rds.amazonaws.com:3306/vacation_db?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
+#spring.datasource.url = jdbc:mysql://vacation.coxhd0mx15wr.us-east-2.rds.amazonaws.com:3306/vacation_db?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
+spring.datasource.url = jdbc:mysql://localhost:3306/vacation_db?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
 
 # Username and password
 spring.datasource.username = root
