--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 # Web Server settings
-server.port = 5000
+server.port = 8080
 
 # ===============================
 # = LOGGING
@@ -14,7 +14,8 @@ server.port = 5000
 
 
 # Connection url for the database "Local MySQL"
-spring.datasource.url = jdbc:mysql://vacation.coxhd0mx15wr.us-east-2.rds.amazonaws.com:3306/vacation_db?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
+#spring.datasource.url = jdbc:mysql://vacation.coxhd0mx15wr.us-east-2.rds.amazonaws.com:3306/vacation_db?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
+spring.datasource.url = jdbc:mysql://localhost:3306/vacation_db?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
 
 # Username and password
 spring.datasource.username = root
@@ -37,7 +38,7 @@ spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project. Set to none if its up and running
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
