--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,16 @@ server.port = 8080
 # ===============================
 # = DATA SOURCE
 # ===============================
+## Local MySQL
+#spring.datasource.url = jdbc:mysql://localhost:3306/vacation_db?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
+#spring.datasource.username = root
+#spring.datasource.password = 1234
+# Google Cloud mySQL
+database=mysql
+spring.datasource.url=jdbc:mysql://google/vacation_db?cloudSqlInstance=semester-app-praktik:europe-west3:sadb-inst&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+spring.datasource.username=root
+spring.datasource.password=db-Instance#Password
 
-# Set here configurations for the database connection
-
-
-# Connection url for the database "Local MySQL"
-spring.datasource.url = jdbc:mysql://localhost:3306/vacation_db?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Berlin
-
-# Username and password
-spring.datasource.username = root
-spring.datasource.password = root
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -27,10 +27,6 @@ spring.datasource.validationQuery = SELECT 1
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-
-# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
-# stripped before adding them to the entity manager).
-
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 
@@ -41,6 +37,3 @@ spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-# Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
