--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,6 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.modelmapper</groupId>
@@ -89,6 +88,10 @@
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>30.1.1-jre</version>
@@ -98,6 +101,11 @@
       <artifactId>spring-boot-autoconfigure</artifactId>
       <version>2.5.4</version>
     </dependency>
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>3.18.1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -105,14 +113,6 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <exclude>
-              <groupId>org.projectlombok</groupId>
-              <artifactId>lombok</artifactId>
-            </exclude>
-          </excludes>
-        </configuration>
       </plugin>
       <!-- Maven plugin to deploy application to Google Cloud App Engine Environment -->
       <!-- https://mvnrepository.com/artifact/com.google.cloud.tools/appengine-maven-plugin -->
@@ -123,7 +123,7 @@
         <configuration>
           <projectId>semester-app-praktik</projectId>
           <enableJarSplitting>true</enableJarSplitting>
-          <deploy.version>v1-basic-version</deploy.version>
+          <deploy.version>v2-added-security</deploy.version>
         </configuration>
       </plugin>
     </plugins>
