Updated  mysql instance connection name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.port = 8080
 #spring.datasource.password = 1234
 # Google Cloud mySQL
 database=mysql
-spring.datasource.url=jdbc:mysql://google/vacation_db?cloudSqlInstance=semester-app-praktik:europe-west3:sadb-inst&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+spring.datasource.url=jdbc:mysql://google/vacation_db?cloudSqlInstance=semester-app-praktik:europe-west3:sa-db-instance&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.datasource.username=root
 spring.datasource.password=db-Instance#Password
 
